# wgpu_lib_for_ai

./: README.md
wgpu-lib-for-ai/: Cargo.toml  LICENSE  README.md
wgpu-lib-for-ai/examples/: shader.wgsl  shader2.wgsl  starlin.rs
wgpu-lib-for-ai/src/: lib.rs
wgpu-lib-for-ai/src/wgpu/: mod.rs  wgpu_init.rs
